add vision embedder
